# dragon-li

./: .gitignore  LICENSE  README.md  rewrite.sh  test_ureq.rs
agent/: llm_provider.py  mcp_client.py  models.py  prompts.py  pyproject.toml  requirements.txt  runtime_agent.py  runtime_agent.spec  skill_manager.py  test_mcp.py  test_skill_manager.py
agent/agent_mcp/: __init__.py  client.py
agent/api/: chat.py  mcp.py
agent/core/: models.py  prompts.py
agent/llm/: anthropic_provider.py  openai_provider.py  provider.py
agent/skills/: manager.py
agent/tools/: builtin.py  registry.py
apps/desktop/: README.md  index.html  package-lock.json  package.json  patch.cjs  run_test.js  test_dompurify.js  test_invoke.js  test_marked.js
apps/desktop/src-tauri/: Cargo.toml  run_cargo_check.sh  tauri.conf.json  test_db  test_db.rs  test_reqwest.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: chat_provider.rs  config_guardrails.rs  main.rs  memory_pipeline.rs  runtime.rs  sqlite_store.rs  test_unix_reqwest.rs  utils.rs
apps/desktop/src-tauri/src/commands/: agent.rs  chat.rs  config.rs  guardrail.rs  mcp.rs  memory.rs  mod.rs  session.rs  skill.rs  system.rs
docs/: 01-product-scope.md  02-desktop-architecture.md  03-session-memory-design.md  04-api-profiles-config.md  05-data-storage-schema.md  06-mvp-plan.md  07-api-profiles-example.md  08-sqlite-ddl.md  09-error-codes-and-retry.md  10-security-boundaries.md  11-capability-skill-mcp-design.md  12-skill-system-implementation-plan.md  13-long-term-memory-redesign.md  README.md
docs/release/: macos-manual-upgrade.md
openspec/: README.md
openspec/changes/: TEMPLATE.md
scripts/: build-macos-package.sh  verify-desktop-runtime.sh  verify-macos-package.sh
(+140 files in other folders)
