[project]
name = "dragon-li-agent"
version = "0.1.0"
description = "Runtime agent for Dragon-Li desktop"
authors = [
    { name = "Dragon-Li Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.20.0",
    "anthropic>=0.25.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-frontmatter>=1.1.0",
    "trafilatura>=1.8.0",
    "pyinstaller>=6.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "llm", "agent_mcp", "skills", "tools"]

[tool.uv]
index-url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[project.scripts]
runtime-agent = "runtime_agent:main"
