[package]
name = "dragon_li_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
dirs-sys = "0.4"
url = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
ureq = { version = "2", features = ["json", "tls"] }
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.5"


sysinfo = "0.32"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
